--- a/sass/layouts/_roomy.scss
+++ b/sass/layouts/_roomy.scss
@@ -48,6 +48,10 @@
 			max-width: 200px;
 			margin: 0 auto 2em;
 
+			.breakpoint-tablet-and-below & {
+				margin: 0 auto 0;
+			}
+
 			img {
 				width: 100%;
 			}
