--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -33,12 +33,17 @@ html {
     font-family: $font2;
 	font-size: 18px;
     line-height: 1.35;
+
 }
 
 body {
-	height: 100%;
+    height: 100%;
     width: 100%;
     color: #555;
+    
+    .breakpoint-phone & {
+        font-size: 15px;
+    }
 }
 
 h1,
