--- a/sass/layouts/_landing.scss
+++ b/sass/layouts/_landing.scss
@@ -16,6 +16,10 @@
 		font-size: 2.2em;
 		margin: 0;
 		line-height: 1.5em;
+
+		.breakpoint-phone & {
+			font-size: 2em;
+		}
 	}
 
 	&-secHeadline {
