--- a/sass/modules/_navigatot.scss
+++ b/sass/modules/_navigatot.scss
@@ -11,6 +11,11 @@
 	margin: 0;
 
 	box-shadow: $materialz1;
+
+	.breakpoint-phone & {
+		padding: 0 .7em;
+	}
+
 }
 
 .logo-container {
@@ -22,4 +27,34 @@
 	img {
 		height: 100%;
 	} 
+}
+
+.navigatot-item {
+	line-height: 64px;
+	float: right;
+	text-decoration: none;
+	margin-left: 32px;
+	font-size: 14px;
+	color: $color1;
+	display: none;
+
+	.breakpoint-desktop & {
+		display: block;
+		font-size: 16px;
+	}
+}
+
+.button-nav {
+	display: block;
+	// box-sizing: content-box;
+	padding: 4px 16px;
+	margin: 12px 0 12px 32px;
+	line-height: 32px;
+	background: $color1;
+	color: #fff;
+	border-radius: 5px;
+
+	&:hover {
+		background: darken($color1, 10%);
+	}
 }
